cabal-version:       3.0

name:                little-scheme
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              dannypsnl
maintainer:          dannypsnl@gmail.com
-- Extra files to be distributed with the package, such as examples or a
-- README.
extra-source-files:  CHANGELOG.md

executable little-scheme
  -- .hs or .lhs file containing the Main module.
  main-is:             Main.hs
  -- Modules included in this executable, other than Main.
  other-modules:       Parser Interpreter Core Meta
  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  -- Other library packages from which modules are imported.
  build-depends:       base, mtl, filepath, directory
                       , parsec
                       , haskeline == 0.7.4.3
                       , little-scheme
  -- Directories containing source files.
  hs-source-dirs:      src
  default-language:    Haskell2010

library
  exposed-modules:     Core Interpreter Parser Meta
  other-modules:
  -- Directories containing source files.
  hs-source-dirs:      src
  build-depends:       base == 4.*, mtl == 2.2.2, filepath == 1.4.2.1, directory == 1.3.3.0
                       , parsec == 3.1.14.0
  default-language:    Haskell2010

test-suite spec
  type: exitcode-stdio-1.0
  other-modules: InterpreterSpec SpecHelper
  hs-source-dirs: test
  main-is: Spec.hs
  build-depends: base, mtl, filepath, directory
                 , hspec == 2.7.1
                 , little-scheme
  default-language:    Haskell2010
