cabal-version:       2.4

name:                little-scheme
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              dannypsnl
maintainer:          dannypsnl@gmail.com
-- Extra files to be distributed with the package, such as examples or a
-- README.
extra-source-files:  CHANGELOG.md

common shared-properties
  default-language: Haskell2010
  build-depends:
    base == 4.*, mtl == 2.2.2, filepath == 1.4.2.1, directory == 1.3.3.0
    , parsec == 3.1.14.0

executable little-scheme
  import: shared-properties
  main-is:             Main.hs
  other-modules:       Parser Interpreter Core Meta
  build-depends:       haskeline == 0.7.4.3
                       , little-scheme
  -- Directories containing source files.
  hs-source-dirs:      src
  default-language:    Haskell2010

library
  import: shared-properties
  exposed-modules:     Core Interpreter Parser Meta
  other-modules:
  -- Directories containing source files.
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite spec
  import: shared-properties
  type: exitcode-stdio-1.0
  other-modules: InterpreterSpec SpecHelper
  hs-source-dirs: test
  main-is: Spec.hs
  build-depends: hspec == 2.7.1
                 , template-haskell >= 2.14
                 , little-scheme
  default-language:    Haskell2010
