cabal-version:       3.0

name:                little-scheme
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              dannypsnl
maintainer:          dannypsnl@gmail.com
-- Extra files to be distributed with the package, such as examples or a
-- README.
extra-source-files:  CHANGELOG.md

common shared-properties
  default-language: Haskell2010
  build-depends:
    base == 4.*, mtl >= 2.2, filepath >= 1.4, directory >= 1.3, transformers >= 0.5
    , parsec >= 3.1
    , haskeline >= 0.7
    , template-haskell >= 2.15
  ghc-options:
    -Wall

executable little-scheme
  import: shared-properties
  main-is:             Main.hs
  other-modules:       Scheme Scheme.Core Scheme.Interpreter Scheme.Interpreter.Transformer Scheme.Parser Scheme.Meta Scheme.Literal
  build-depends:       little-scheme
  -- Directories containing source files.
  hs-source-dirs:      src
  default-language:    Haskell2010

library
  import: shared-properties
  exposed-modules:     Scheme Scheme.Core Scheme.Interpreter Scheme.Interpreter.Transformer Scheme.Parser Scheme.Meta Scheme.Literal
  other-modules:
  -- Directories containing source files.
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite spec
  import: shared-properties
  type: exitcode-stdio-1.0
  other-modules: InterpreterSpec Interpreter.TransformerSpec SpecHelper
  hs-source-dirs: test
  main-is: Spec.hs
  build-depends: hspec >= 2.7
                 , hspec-discover >= 2.7
                 , template-haskell >= 2.14
                 , little-scheme
  default-language:    Haskell2010
